--- a/NOMAD/Base.lproj/Main.storyboard
+++ b/NOMAD/Base.lproj/Main.storyboard
@@ -17,12 +17,9 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v36-ST-ytu">
-                                <rect key="frame" x="0.0" y="113" width="320" height="455"/>
+                                <rect key="frame" x="0.0" y="113" width="320" height="390"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="455" id="l4e-zh-QNM"/>
-                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="TV2-Y3-Cin">
                                         <rect key="frame" x="0.0" y="22" width="320" height="140"/>
@@ -63,6 +60,9 @@
                                 <rect key="frame" x="0.0" y="-1" width="320" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.61960784310000006" green="0.0" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="114" id="mew-Lv-qFj"/>
+                                </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mNZ-Sn-V9x">
                                 <rect key="frame" x="0.0" y="503" width="320" height="65"/>
@@ -76,6 +76,9 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ZUw-dI-oJT" kind="modal" modalTransitionStyle="flipHorizontal" id="Edf-TY-kPa"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NomadHeaderLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="ges-Tg-Pvs">
                                 <rect key="frame" x="95" y="3" width="128" height="128"/>
@@ -94,11 +97,13 @@
                             <constraint firstAttribute="trailing" secondItem="v36-ST-ytu" secondAttribute="trailing" id="Iyp-sT-RzH"/>
                             <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="top" constant="4" id="Kbd-qT-3Hm"/>
                             <constraint firstItem="Pbz-iJ-elP" firstAttribute="trailing" secondItem="v36-ST-ytu" secondAttribute="trailing" id="Lf1-6n-3H3"/>
+                            <constraint firstItem="mNZ-Sn-V9x" firstAttribute="top" secondItem="v36-ST-ytu" secondAttribute="bottom" id="MEK-xQ-X16"/>
                             <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="9O2-cU-W3e" secondAttribute="top" constant="3" id="TPX-65-uT8"/>
                             <constraint firstItem="oEy-H1-fcY" firstAttribute="top" secondItem="ges-Tg-Pvs" secondAttribute="bottom" constant="437" id="U9T-2v-7f4"/>
-                            <constraint firstAttribute="bottom" secondItem="v36-ST-ytu" secondAttribute="bottom" id="UzO-JI-Do8"/>
+                            <constraint firstAttribute="bottom" secondItem="v36-ST-ytu" secondAttribute="bottom" constant="65" id="UzO-JI-Do8"/>
                             <constraint firstAttribute="bottom" secondItem="mNZ-Sn-V9x" secondAttribute="bottom" id="VMy-sO-RLq"/>
                             <constraint firstItem="mNZ-Sn-V9x" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" id="WIX-pL-ZK3"/>
+                            <constraint firstItem="v36-ST-ytu" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="bottom" id="ltp-68-FY9"/>
                             <constraint firstItem="v36-ST-ytu" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" id="xU5-5u-gES"/>
                         </constraints>
                     </view>
@@ -109,6 +114,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f3k-7S-QtC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="111" y="-16"/>
+        </scene>
+        <!--Order Details View Controller-->
+        <scene sceneID="WKj-Lc-Q8Y">
+            <objects>
+                <viewController id="ZUw-dI-oJT" customClass="OrderDetailsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WmL-5L-LsK"/>
+                        <viewControllerLayoutGuide type="bottom" id="bqO-eg-sqt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PRA-Wb-Pvq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pwe-sv-Jax">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ORDERDETAILSTEXTCELLIDENTIFIER" id="zZn-cF-Usn" customClass="OrderDetailsTextTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zZn-cF-Usn" id="4Lf-U5-zfg">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Vh-3C-qJg">
+                                                    <rect key="frame" x="10" y="0.0" width="75" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2K-eZ-KxU">
+                                                    <rect key="frame" x="98" y="11" width="202" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="detailsImageView" destination="4Vh-3C-qJg" id="Ux7-Cm-G40"/>
+                                            <outlet property="detailsLabel" destination="K2K-eZ-KxU" id="ws2-e3-iNU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="ZUw-dI-oJT" id="5Nu-SR-zw4"/>
+                                    <outlet property="delegate" destination="ZUw-dI-oJT" id="Tnd-tm-78M"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="s2q-Mk-jCS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2gi-Ld-9IZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="95"/>
         </scene>
     </scenes>
     <resources>
