--- a/NOMAD/Base.lproj/Main.storyboard
+++ b/NOMAD/Base.lproj/Main.storyboard
@@ -118,10 +118,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pwe-sv-Jax">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pwe-sv-Jax">
+                                <rect key="frame" x="0.0" y="114" width="320" height="389"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="KIU-IW-qGy"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ORDERDETAILSTEXTCELLIDENTIFIER" rowHeight="75" id="zZn-cF-Usn" customClass="OrderDetailsTextTableViewCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="75"/>
@@ -157,10 +160,57 @@
                                     <outlet property="delegate" destination="ZUw-dI-oJT" id="Tnd-tm-78M"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vg3-kf-A4S">
+                                <rect key="frame" x="0.0" y="503" width="320" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.61960784310000006" green="0.0" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="i1O-Fd-tkb"/>
+                                    <constraint firstAttribute="height" constant="65" id="jBv-wI-pgs"/>
+                                    <constraint firstAttribute="width" constant="320" id="sSM-or-U57"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="24"/>
+                                <state key="normal" title="GET QUOTE">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRT-YQ-0lw">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.61960784310000006" green="0.0" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="2rv-wJ-1cu"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="114" id="3cx-eG-TRW"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="3dO-NK-axq"/>
+                                    <constraint firstAttribute="height" constant="114" id="8Z1-pj-nGS"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NomadHeaderLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="mpk-qM-j2l">
+                                <rect key="frame" x="93" y="-10" width="134" height="134"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bqO-eg-sqt" firstAttribute="top" secondItem="vg3-kf-A4S" secondAttribute="bottom" id="737-b3-gFP"/>
+                            <constraint firstAttribute="trailing" secondItem="vg3-kf-A4S" secondAttribute="trailing" id="8Av-at-rGy"/>
+                            <constraint firstItem="mpk-qM-j2l" firstAttribute="centerX" secondItem="lRT-YQ-0lw" secondAttribute="centerX" id="D29-Mz-N19"/>
+                            <constraint firstItem="mpk-qM-j2l" firstAttribute="centerY" secondItem="lRT-YQ-0lw" secondAttribute="centerY" id="JFd-RM-3Mf"/>
+                            <constraint firstItem="pwe-sv-Jax" firstAttribute="leading" secondItem="PRA-Wb-Pvq" secondAttribute="leading" id="JqE-Zk-sbO"/>
+                            <constraint firstItem="vg3-kf-A4S" firstAttribute="top" secondItem="pwe-sv-Jax" secondAttribute="bottom" id="ME7-nd-aim"/>
+                            <constraint firstItem="pwe-sv-Jax" firstAttribute="top" secondItem="lRT-YQ-0lw" secondAttribute="bottom" id="MGe-21-rEN"/>
+                            <constraint firstAttribute="trailing" secondItem="pwe-sv-Jax" secondAttribute="trailing" id="QZY-xa-vAS"/>
+                            <constraint firstAttribute="trailing" secondItem="lRT-YQ-0lw" secondAttribute="trailing" id="Sxg-ho-avB"/>
+                            <constraint firstItem="lRT-YQ-0lw" firstAttribute="leading" secondItem="PRA-Wb-Pvq" secondAttribute="leading" id="W4t-qg-evT"/>
+                            <constraint firstItem="vg3-kf-A4S" firstAttribute="leading" secondItem="PRA-Wb-Pvq" secondAttribute="leading" id="fdP-aW-KEX"/>
+                            <constraint firstItem="lRT-YQ-0lw" firstAttribute="top" secondItem="PRA-Wb-Pvq" secondAttribute="top" id="wUJ-tP-2R4"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="s2q-Mk-jCS"/>
+                    <connections>
+                        <outlet property="_buttonToBottomConstraint" destination="737-b3-gFP" id="sN2-AC-qlW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2gi-Ld-9IZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
